# hca-rs

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  SPECIFICATION.md
.github/workflows/: bench.yml  ci.yml  fuzz.yml  release.yml
benches/: address_bench.rs  full_flow_bench.rs  hash_bench.rs  merkle_bench.rs
examples/: create_account.rs  spend_transaction.rs  verify_proof.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_evm_opcode.rs  fuzz_merkle.rs  fuzz_proof.rs  fuzz_rlp.rs  fuzz_rlp_decode.rs  fuzz_witness.rs
src/: address.rs  builder.rs  constants.rs  error.rs  hash.rs  leaf_version.rs  lib.rs  merkle.rs  rlp.rs  wasm.rs  witness.rs
src/evm/: gas.rs  mod.rs  opcode.rs
tests/: cli_tests.rs  property_tests.rs  vector_tests.rs
tests/vectors/: address_derivation.json  hca_construction.json  merkle_proofs.json  rlp_encoding.json  rotation.json  tagged_hash.json  witness_signing.json
