[package]
name = "hca-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "HCA — Hash-Committed Account cryptographic primitives for Ethereum"
license = "Apache-2.0"
repository = "https://github.com/eth-hca/hca-rs"
keywords = ["ethereum", "cryptography", "merkle", "post-quantum", "hca"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["hex/std", "serde_json", "serde/std"]
wasm = ["std", "wasm-bindgen", "js-sys", "console_error_panic_hook"]

[dependencies]
tiny-keccak = { version = "2.0", features = ["keccak"] }
subtle = { version = "2.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
hex-literal = "0.4"
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"
hex = "0.4"

# Integration tests always need std (they link against the std test harness)
hca-rs = { path = ".", features = ["std"] }

[[bench]]
name = "hash_bench"
harness = false

[[bench]]
name = "merkle_bench"
harness = false

[[bench]]
name = "address_bench"
harness = false

[[bench]]
name = "full_flow_bench"
harness = false

[profile.release]
opt-level = "s"